# financier

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  run_examples.sh  runtests
.github/workflows/: ci.yml
examples/: example1.py  export_to_csv.py  side_by_side_png.py
financier/: __init__.py  calculator.py  offer.py  visualizer.py
financier/components/: __init__.py  component.py  daily_reward.py  match401k.py  one_time_bonus.py  periodic_bonus.py  salary.py  stock.py  stock_grant.py  vesting_schedule.py
tests/: test_offer.py  test_one_time_bonus.py  test_periodic_bonus.py  test_salary.py  test_stock_grant.py
